# dssat-csm-os

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  ASMDM.FOR  AUTHAR.FOR  AUTPLT.FOR  AUTPLT.for  BS_CERES.FOR  BS_GROSUB.for  BS_NFACTO.for  BS_NUPTAK.FOR  BS_NUPTAK.for  BS_OPGROW.FOR  BS_OPGROW.for  BS_OPHARV.FOR  BS_OPNIT.FOR  BS_PHENOL.for  BS_ROOTS.FOR  CANOPY.FOR  CENTURY.for  CE_RATIO_C.FOR  CMakeLists.txt  CO2VAL.FOR  CO2VAL.for  COMGEN.BLK  COMGEN.blk  COMIBS.blk  COMSOI.BLK  COMSOI.blk  COMSWI.BLK  COMSWI.blk  CROPGRO.for  CRSIMDEF.FOR  CRSIMDEF.for  CRSIMDEF.fpp  CSCAS.FOR  CSCAS.f90  CSCAS.for  (+522 more)
.metadata/: version.ini
2D/: Denit_Ceres_2D.for  Drainage_2D.for  Drip_Irrig.for  ESR_SoilEvap_2D.for  NCHECK_inorg_2D.for  NFLUX_2D.for  NUPTAK_2D.for  OPSOILNI_2D.for  OPWBAL_2D.for  PT_GROSUB_2D.for  PT_NUPTAK_2D.for  PT_ROOTGR_2D.for  PT_SUBSTOR_2D.for  ROOTS_2D.for  ROOTWU_2D.for  ROOTWU_HR.for  SOILEV_2D.for  SOILNI_2D.for  SPAM_2D.for  SW_Sensor.for  SoilCellInit_2D.f90  SoilCellUtils_2D.f90  SoilNiBal_2D.for  SoilNi_init_2D.for  WBAL_2D.for  WBAL_2D_ts.for  WatBal2D.for  WaterTable_2D.f90
ALOHA-Pineapple/: Aloha_GROSUB.for  Aloha_NFACTO.for  Aloha_NUPTAK.for  Aloha_OPGROW.f90  Aloha_PHENOL.for  Aloha_PINE.for  Aloha_mod.f90
AgMaize/: MZ_AG_AGMAIZE.f90  MZ_AG_Growth.f90  MZ_AG_Iphotsynt.f90  MZ_AG_KernelNum.f90  MZ_AG_LeafArea.f90  MZ_AG_Module.f90  MZ_AG_Opgrow.f90  MZ_AG_Opharv.f90  MZ_AG_Opharv2.f90  MZ_AG_PartCoefs.f90  MZ_AG_Phenol.f90  MZ_AG_Photsynt.f90  MZ_AG_Radabs.f90  MZ_AG_RespirIXIM.f90  MZ_AG_Respiration.f90  MZ_AG_RootGro.f90  MZ_AG_Utilities.f90  MZ_AG_WFactor.f90
Aloha/: Aloha_GROSUB.for  Aloha_IPCROP.for  Aloha_IPPlant.for  Aloha_NFACTO.for  Aloha_NUPTAK.for  Aloha_OPDAY.for  Aloha_OPGROW.f90  Aloha_OPHARV.for  Aloha_PHASEI.for  Aloha_PHENOL.for  Aloha_PINE.for  Aloha_ROOTGR.for  Aloha_mod.f90
CSM_Main/: CSM.for  LAND.for
CSV/: csvoutput.f90
CSVOUTS/: OUTPUT.CDE  SIMULATION.CDE  csvgenericf.f90  csvlinklist.f90  csvoutput.f90
DSSAT/: .cproject
Data/: DATA.CDE  DETAIL.CDE  DSCSM046.CTR  DSCSM047.CTR  DSCSM048.CTR  DSSATPRO.L47  DSSATPRO.L47.in  DSSATPRO.L48.in  DSSATPRO.V46  DSSATPRO.v46  DSSATPRO.v47  DSSATPRO.v48  ECONOMIC.CDE  GCOEFF.CDE  GRSTAGE.CDE  JDATE.CDE  MODEL.ERR  OUTPUT.CDE  PEST.CDE  SIMULATION.CDE  SOIL.CDE  Simulation.cde  WEATHER.CDE
InputModule/: COMGEN.blk  COMIBS.blk  COMSOI.blk  COMSWI.blk  INSOIL.for  INSTGE.for  INTRO.for  INVAR.for  IPCHEM.for  IPECO.for  IPENV.for  IPMAN.for  IPSIM.for  IPSLIN.for  IPSOIL_Inp.for  IPTILL.for  IPVAR.for  MAKEFILEW.f90  OPGEN.for  OPHEAD.for  OPTEMPXY2K.for  PATH.for  SECLI.for  SECROP.for  SEFERT.for  SEFLD.for  SEFREQ.for  SEHARV.for  SEINIT.for  SEIRR.for  SENS.for  SEPEST.for  SEPLT.for  SERES.for  SESIM.for  SESOIL.for  SETIME.for  SEVAR.for  SEWTH.for  WEATHR_Inp.for  (+5 more)
Make/: makefile
Management/: AUTHAR.for  AUTPLT.for  CHEMICAL.for  Capillary.for  CapillaryRitchie.for  FertType_mod.for  Fert_Place.for  Flood_Irrig.for  IRRIG.for  MgmtOps.for  OM_Place.for  OpFlood.for  Paddy_Mgmt.for  SUBSL2.for  SUWCMS2.for  TillEvent.for  Tillage.for  WaterTable.f90
OP_OBS/: DS1900.f90  GETOBS.F90  INQOBS.f90  Makefile  OBSINI.f90  OBSSYS.F90  OBSTRG.f90  OPCF.F90  OPINIT.f90  OPNF.F90  OPREAD.F90  OPSC.F90  OPSTOR.f90  OPSYS.F90  OPWRITE.f90  TTHEAD.F90
ORYZA/: CSMWrapper.f90  GPPARGET.F90  GPPARSET.F90  GPPARSET.f90  G_Exper.f90  G_Soil.f90  Makefile  Ncrop3.f90  NightT.f90  ORYZA1.f90  ORYZA_Interface.f90  OR_Opgrow.f90  OR_PHENOL.F90  OR_ROOTG.F90  PARTITION.F90  SASTRO.F90  SGPC1.F90  SGPC1.f90  SGPC2.F90  SGPC2.f90  SGPCDT.F90  SGPL.F90  SGPL.f90  SRDPRF.F90  SSKYC.F90  SSKYC.f90  SUBCBC.F90  SUBCBC.f90  SUBCD2.F90  SUBCD2.f90  SUBDD.F90  SUBDD.f90  SUBGRN.F90  SUBLAI3.F90  SVPS1.F90  VARIABLE.F90  VARIABLE.f90  WStress2.f90  wnostress.f90
Plant/: plant.for
Resources/: Prepare_new_release_exe.txt  Version046.rc  Version047.rc  Version48.rc  resource
SALUS/: Makefile  SALUS.f90  SALUS_NPuptake.f90  SALUS_OPGROW.FOR  SALUS_OPHARV.FOR  SALUS_Opgrow.f90  SALUS_Opharv.f90  SALUS_Roots.f90  SALUS_Roots.for  SALUS_Subs.f90  SALUS_Subs.for
SPAM/: ESR_SoilEvap.for  ETPHOT.for  ETPHR.for  OPETPHOT.for  OpStemp.for  PET.for  ROOTWU.for  SAL_Stemp.for  SOILEV.for  SPAM.for  SPSUBS.for  STEMP.for  STEMP_EPIC.for  TRANS.for  TRANS_old.for
Soil/: SOIL.for
Utilities/: CSDISEASE.for  CSMVersion.for  CSMVersion.for.in  CSREADS.for  CSUTS.for  CheckRunMode.f90  DATES.for  ERROR.for  IPIBS.for  Info.for  ModuleDefs.for  MultiHar.f90  OPGeneric.for  OPSTRESS.for  OPSUM.for  OPVIEW.for  OSDefsLINUX.for  OSDefsWINDOWS.for  READS.for  RunList.for  UTILS.for  Warning.for  run_dssat.in
Weather/: CO2VAL.for  HMET.for  IPWTH_alt.for  ModForecast.f90  OFLA1201.WTH  OPWEATH.for  SOLAR.for  WGEN.for  WTHMOD.for  weathr.for
YCA/: CSYCA.f90  CSYCA_Interface.for  YCA_Albedo_Check_m.f90  YCA_Control_Leaf.f90  YCA_Control_Photosynthesis.f90  YCA_Control_Plant.f90  YCA_Environment.f90  YCA_First_Trans_m.f90  YCA_Formats_m.f90  YCA_Growth.f90  YCA_Growth_Distribute.f90  YCA_Growth_Evapo.f90  YCA_Growth_Init.f90  YCA_Growth_NUptake.f90  YCA_Growth_Part.f90  YCA_Growth_Photo.f90  YCA_Growth_Rates.f90  YCA_Growth_Senesce.f90  YCA_Integ_AgesWts.f90  YCA_Integ_EndCrop.f90  YCA_Integ_HstFail.f90  YCA_Integ_LA.f90  YCA_Integ_N.f90  YCA_Integ_Nconc.f90  YCA_Integ_SeasEnd.f90  YCA_Integ_Stages.f90  YCA_Integ_WthrSum.f90  YCA_Integrate.f90  YCA_LeafControl.f90  YCA_Node.f90  YCA_Out_CrpSim.f90  YCA_Out_Error.f90  YCA_Out_Eval.f90  YCA_Out_LfTier.f90  YCA_Out_ModFail.f90  YCA_Out_PlGrow.f90  YCA_Out_PlantSum.f90  YCA_Out_ReInit.f90  YCA_Out_Sens.f90  YCA_Out_Work.f90  (+11 more)
include/: COMGEN.blk
ttutil/: INSW.FOR  INTGRL.for  LIMIT.FOR  LINT2.for  Makefile  addint.for  addrea.for  addstf.for  ambusy.for  copfl2.for  decchk.for  decint.for  dtdpar.for  dtfsecmp.for  dtfsedp.for  dtnow.f90  dtsys.for  entddo.for  entdin.for  entdou.for  entdre.for  entdti.for  enthlp.for  entint.for  entrea.for  extens.for  fopengstandard.f90  fopens.for  getrec.for  getun.for  ifindc.f90  istart.for  iunifl.for  (+61 more)
(+3214 files in other folders)
